# bookos-calc

./: .gitignore  PKGBUILD  README.md  bookos-calc-0.1.0-1-x86_64.pkg.tar.zst
pkg/bookos-calc/: .BUILDINFO  .MTREE  .PKGINFO
pkg/bookos-calc/usr/share/applications/: bookos-calc.desktop
src/: index.html  locales.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/linux/: desktop.hbs
src-tauri/src/: main.rs
